--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,26 @@
 @font-face {
-    font-family: 'Poiret One';
+    font-family: 'Dosis';
+    src: url(../fonts/Dosis-ExtraLight.ttf);
+}
+@font-face {
+    font-family: 'Varela';
+    src: url(../fonts/VarelaRound-Regular.ttf);
+}
+@font-face {
+    font-family: 'Orbitron';
+    src: url(../fonts/Orbitron-VariableFont_wght.ttf);
+}
+@font-face {
+    font-family: 'Poiret';
     src: url(../fonts/PoiretOne-Regular.ttf);
 }
-html, body {
+@font-face {
+    font-family: 'Exo';
+    src: url(../fonts/Exo-Light.ttf);
+}
+html, body, main, section {
     width: 100vw;
-    font-family: 'Poiret One', 'Dosis', 'Varela Round', Arial, Helvetica, sans-serif;
+    font-family: 'Dosis', 'Varela', Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
     scrollbar-width: none;
 }
