--- a/styles/home.css
+++ b/styles/home.css
@@ -179,7 +179,7 @@ h2 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    transition: flex 1.5s ease-in-out, transform 500ms ease-in-out;
+    transition: flex 1.2s ease-in-out, transform 500ms ease-in-out;
     transform-origin: center;
     flex: 1;
     overflow: clip;
@@ -313,10 +313,12 @@ h2 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 30%;
+    transition: all 350ms ease-in-out;
 }
 .brand:hover {
     background-color: #e6e6e6;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.20);
+    transform: scale(1.1);
 }
 #volkswagen {
     background-image: url("../media/Volkswagen-logo.png");
