--- a/styles/home.css
+++ b/styles/home.css
@@ -84,10 +84,8 @@ header {
     }
 }
 #credits {
-    display: flex block;
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin-top: 48px;
     font-family: 'Varela';
 }
@@ -294,20 +292,23 @@ h2 {
     height: 100vh;
 }
 #scrollFrame {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
-    margin-left: 10%;
-    background-color: #ffffffbf;
-    overflow-x: clip;
+    width: 33.33vw;
+    overflow-x: visible;
     overflow-y: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
-    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.20);
 }
 #brands {
     height: 400vh;
-    width: 25vw;
+    width: 20vw;
     display: grid;
-    grid-template-rows: repeat(auto, 1fr);
+    grid-template-rows: repeat(15, 1fr);
+    gap: 5vh;
+    background-color: #e6e6e6;
 }
 .brand {
     background-position: center;
@@ -316,9 +317,9 @@ h2 {
     transition: all 350ms ease-in-out;
 }
 .brand:hover {
-    background-color: #e6e6e6;
+    background-color: #ffffff;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.20);
-    transform: scale(1.1);
+    transform: scale(1.25);
 }
 #volkswagen {
     background-image: url("../media/Volkswagen-logo.png");
