--- a/styles/home.css
+++ b/styles/home.css
@@ -301,7 +301,8 @@ h2 {
     align-items: center;
     justify-content: center;
     height: 100%;
-    width: 33.33vw;
+    width: 25vw;
+    margin-left: 10%;
     overflow-x: visible;
     overflow-y: scroll;
     scroll-behavior: smooth;
@@ -324,7 +325,7 @@ h2 {
 .brand:hover {
     background-color: #ffffff;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.20);
-    transform: scale(1.25);
+    transform: scale(1.1);
 }
 #volkswagen {
     background-image: url("../media/Volkswagen-logo.png");
